; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_usrreq.c_tcp_connect_complete.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_usrreq.c_tcp_connect_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32, i32 }
%struct.tcpcb = type { i32, i32, i32 }
%struct.inpcb = type { i32 }

@SOF1_PRECONNECT_DATA = common dso_local global i32 0, align 4
@EHOSTUNREACH = common dso_local global i32 0, align 4
@IFSCOPE_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*)* @tcp_connect_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcp_connect_complete(%struct.socket* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.tcpcb*, align 8
  %5 = alloca %struct.inpcb*, align 8
  %6 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %3, align 8
  %7 = load %struct.socket*, %struct.socket** %3, align 8
  %8 = call %struct.tcpcb* @sototcpcb(%struct.socket* %7)
  store %struct.tcpcb* %8, %struct.tcpcb** %4, align 8
  %9 = load %struct.socket*, %struct.socket** %3, align 8
  %10 = call %struct.inpcb* @sotoinpcb(%struct.socket* %9)
  store %struct.inpcb* %10, %struct.inpcb** %5, align 8
  store i32 0, i32* %6, align 4
  %11 = load %struct.socket*, %struct.socket** %3, align 8
  %12 = getelementptr inbounds %struct.socket, %struct.socket* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @SOF1_PRECONNECT_DATA, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %38

17:                                               ; preds = %1
  %18 = load %struct.socket*, %struct.socket** %3, align 8
  %19 = call %struct.inpcb* @sotoinpcb(%struct.socket* %18)
  %20 = call i32 @necp_socket_is_allowed_to_send_recv(%struct.inpcb* %19, i32* null, i32* null, i32* null)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %24, label %22

22:                                               ; preds = %17
  %23 = load i32, i32* @EHOSTUNREACH, align 4
  store i32 %23, i32* %2, align 4
  br label %43

24:                                               ; preds = %17
  %25 = load %struct.tcpcb*, %struct.tcpcb** %4, align 8
  %26 = load i32, i32* @IFSCOPE_NONE, align 4
  %27 = call i32 @tcp_mss(%struct.tcpcb* %25, i32 -1, i32 %26)
  %28 = load %struct.tcpcb*, %struct.tcpcb** %4, align 8
  %29 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.tcpcb*, %struct.tcpcb** %4, align 8
  %32 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  %33 = load %struct.tcpcb*, %struct.tcpcb** %4, align 8
  %34 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.tcpcb*, %struct.tcpcb** %4, align 8
  %37 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %36, i32 0, i32 1
  store i32 %35, i32* %37, align 4
  br label %41

38:                                               ; preds = %1
  %39 = load %struct.tcpcb*, %struct.tcpcb** %4, align 8
  %40 = call i32 @tcp_output(%struct.tcpcb* %39)
  store i32 %40, i32* %6, align 4
  br label %41

41:                                               ; preds = %38, %24
  %42 = load i32, i32* %6, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %41, %22
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local %struct.tcpcb* @sototcpcb(%struct.socket*) #1

declare dso_local %struct.inpcb* @sotoinpcb(%struct.socket*) #1

declare dso_local i32 @necp_socket_is_allowed_to_send_recv(%struct.inpcb*, i32*, i32*, i32*) #1

declare dso_local i32 @tcp_mss(%struct.tcpcb*, i32, i32) #1

declare dso_local i32 @tcp_output(%struct.tcpcb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
